--- a/client/src/components/ContestBox/ContestBox.module.sass
+++ b/client/src/components/ContestBox/ContestBox.module.sass
@@ -15,6 +15,7 @@
     align-items: flex-start
     justify-content: flex-start
     margin-right: 20px
+    cursor: pointer
 
     .prizeContainer
       margin-top: 5px
