--- a/client/src/components/ContestBox/ContestBox.module.sass
+++ b/client/src/components/ContestBox/ContestBox.module.sass
@@ -22,6 +22,7 @@
       display: flex
       justify-content: flex-start
       align-items: center
+      user-select: none
 
       .prize
         display: flex
