add user-select: none and cursor: pointer for dashboard

--- a/client/src/components/Brief/Brief.module.sass
+++ b/client/src/components/Brief/Brief.module.sass
@@ -55,6 +55,8 @@
         padding: 12px 28px
         border-radius: 8px
         background-color: #8aca6b
+        cursor: pointer
+        user-select: none
 
         &:hover
           background-color: #6b8ab1
