--- a/client/src/pages/ContestPage/ContestPage.module.sass
+++ b/client/src/pages/ContestPage/ContestPage.module.sass
@@ -1,7 +1,7 @@
 .notFound
   color: #455a89
   font-size: 20px
-  margin-top: 40px
+  margin: 20px 0
   width: 100%
   text-align: center
 
@@ -25,12 +25,12 @@
     font-size: 20px
 
 .containerSpinner
-  height: 100vh
   display: flex
   flex: 1
   justify-content: center
   align-items: center
   align-self: stretch
+  height: 100vh
 
 .tryContainer
   margin: 0 auto
@@ -53,14 +53,14 @@
     flex-direction: column
 
   .infoContainer
-    width: 80%
-    box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1)
-    margin-right: 40px
     flex: 1 1
     display: flex
     flex-direction: column
     align-items: flex-start
     justify-content: flex-start
+    width: 80%
+    box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1)
+    margin-right: 40px
     @media(max-width: 680px)
       width: auto
       margin: 10px
