fix .signUpContainer height

--- a/client/src/pages/RegistrationPage/RegistrationPage.module.sass
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.sass
@@ -51,8 +51,8 @@
     padding: 20px
     min-width: 280px
     min-height: 650px
+    height: 100vh
     padding-top: 40px
-
 
     .headerSignUpPage
       display: flex
@@ -64,7 +64,6 @@
       padding-right: 60px
       @media (max-width: 530px)
         padding: 0
-
 
     .linkLoginContainer
       border: 1px solid white
