--- a/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
@@ -1,5 +1,17 @@
+
 .dashboardContainer
+  flex: 1 1
   display: flex
   flex-direction: column
-  align-items: center
-  margin: 0 auto
+  align-items: flex-start
+  justify-content: flex-start
+  width: 80%
+  max-width: 900px
+  box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1)
+  margin: 20px auto
+  // margin-left: 40px
+  padding: 30px 40px 10px 40px
+  @media(max-width: 680px)
+    width: auto
+    margin: 10px
+    align-self: stretch
