--- a/client/src/components/ModeratorDashboard/OffersList/OfferItem/OfferItem.module.sass
+++ b/client/src/components/ModeratorDashboard/OffersList/OfferItem/OfferItem.module.sass
@@ -1,9 +1,7 @@
 .offerContainer
   display: flex
   flex-direction: column
-  // justify-content: space-between
   user-select: none
-  // width: 100%
   margin: 15px auto
   padding: 15px 10px
   box-sizing: border-box
@@ -21,4 +19,17 @@
 .userInfo
   margin-right: 15px
 
+.status
+  text-transform: uppercase
 
+.accepted
+  color: green
+
+.declined
+  color: red
+
+.pending
+  color: #28d2d0
+
+.offerImage
+  width: 100px
