--- a/client/src/pages/RegistrationPage/RegistrationPage.module.sass
+++ b/client/src/pages/RegistrationPage/RegistrationPage.module.sass
@@ -50,8 +50,7 @@
     width: 72%
     padding: 20px
     min-width: 280px
-    min-height: 650px
-    height: 100vh
+    min-height: 100vh
     padding-top: 40px
 
     .headerSignUpPage
