--- a/client/src/components/ModeratorDashboard/OffersList/OfferItem/OfferItem.module.sass
+++ b/client/src/components/ModeratorDashboard/OffersList/OfferItem/OfferItem.module.sass
@@ -1,22 +1,40 @@
 .offerContainer
   display: flex
   flex-direction: column
+  align-self: stretch
   user-select: none
+  color: #556da5
   margin: 15px auto
   padding: 15px 10px
   box-sizing: border-box
   background-color: #f9fafb
-  align-self: stretch
   padding: 30px 40px 10px 40px
   border-radius: 10px
+  @media(max-width: 640px)
+    padding: 10px
+
+.userInfo
+  padding-bottom: 10px
 
 .offerInfo
   display: flex
   justify-content: space-between
-  @media(max-width: 450px)
+  @media(max-width: 512px)
     flex-direction: column
+    align-items: flex-start
+
+.contestInfo
+  flex-grow: 1
+  margin-right: 10px
+  padding-bottom: 10px
+
+.offer
+  min-width: 150px
+  @media(max-width: 640px)
+    min-width: 100px
 
 .userInfo
+  // align-self: flex-start
   margin-right: 15px
 
 .status
