add constants and fix Buttons styles

--- a/client/src/components/ModeratorDashboard/OffersList/OfferItem/Buttons/Buttons.module.sass
+++ b/client/src/components/ModeratorDashboard/OffersList/OfferItem/Buttons/Buttons.module.sass
@@ -1,11 +1,8 @@
 .buttonsContainer
+  display: flex
+  justify-content: flex-end
   margin: 5px 0
   padding-top: 15px
-  align-self: stretch
-  display: flex
-  flex-direction: row
-  align-items: center
-  justify-content: space-between
 
 .buttons
   font: inherit
@@ -16,6 +13,7 @@
 
 .decline
   background-color: #CD5C5C
+  margin-left: 15px
   &:hover
     background-color: #dc8d8d
 
