--- a/client/src/components/OfferBox/OfferBox.module.sass
+++ b/client/src/components/OfferBox/OfferBox.module.sass
@@ -89,7 +89,7 @@
         font-size: 34px
         transition: font-size 0.2s
 
-    .responseConainer
+    .responseContainer
       width: 70%
       align-self: center
       display: flex
