--- a/client/src/pages/LoginPage/LoginPage.module.sass
+++ b/client/src/pages/LoginPage/LoginPage.module.sass
@@ -15,10 +15,10 @@
 
     .loginFormContainer
       display: flex
+      flex-direction: column
       align-items: center
       justify-content: center
       margin-top: 80px
-
 
     .headerSignUpPage
       display: flex
@@ -45,3 +45,8 @@
 
       span
         color: white
+
+.forgotPassword
+  color: white
+  &:hover
+    transform: scale(1.1)
