add submit handler for reset password form

--- a/client/src/components/ForgotPasswordForm/ForgotPasswordForm.module.sass
+++ b/client/src/components/ForgotPasswordForm/ForgotPasswordForm.module.sass
@@ -9,7 +9,7 @@
   width: 100%
   height: 81vh
 
-.loginForm
+.passwordForm
   @extend %flex-column-just-center
   width: 100%
   max-width: 595px
@@ -21,3 +21,18 @@
 .loginHeader
   font-size: 30px
   padding: $padding-value
+
+.inputContainer
+  @extend %inputContainer
+
+.formInput
+  @extend %formInput
+
+.fieldWarning
+  @extend %fieldWarning
+
+.notValid
+  @extend %notValid
+
+.valid
+  @extend %valid
