--- a/client/src/pages/ConfirmationResetPasswordPage/ConfirmationResetPasswordPage.module.sass
+++ b/client/src/pages/ConfirmationResetPasswordPage/ConfirmationResetPasswordPage.module.sass
@@ -8,23 +8,23 @@
 .passwordContainer
   display: flex
   flex-direction: column
-  background-color: #3ea9f5
   min-width: 300px
   width: 1200px
 
 .passwordFormContainer
   display: flex
-  align-items: center
+  align-items: flex-start
   justify-content: center
-  margin-top: 80px
+  background-color: #ffffff
+  padding-top: 80px
+  height: 100%
 
 .header
   display: flex
   justify-content: space-between
   align-items: center
   margin-top: 26px
-  padding-left: 45px
-  padding-right: 100px
+  padding: 80px 100px 30px 45px
   @media (max-width: 530px)
     padding-right: 45px
 
