fix ConfirmationResetPassword styles

--- a/client/src/pages/ConfirmationResetPasswordPage/ConfirmationResetPasswordPage.module.sass
+++ b/client/src/pages/ConfirmationResetPasswordPage/ConfirmationResetPasswordPage.module.sass
@@ -3,7 +3,7 @@
   justify-content: center
   align-items: flex-start
   background-color: #3ea9f5
-  padding-top: 40px
+  height: 100vh
 
 .passwordContainer
   display: flex
@@ -15,7 +15,6 @@
   display: flex
   align-items: flex-start
   justify-content: center
-  background-color: #ffffff
   padding-top: 80px
   height: 100%
 
