fix styles for reset password styles

--- a/client/src/components/ForgotPasswordForm/ForgotPasswordForm.module.sass
+++ b/client/src/components/ForgotPasswordForm/ForgotPasswordForm.module.sass
@@ -1,13 +1,13 @@
 @import  '../../common/templates.sass'
 
 .container
-  @extend %flex-column
+  @extend %flex-column-align-center
   margin: 0 auto
-  padding-top: 55px
-  background-color: $background-color
+  padding: 55px 40px 0
+  background-color: $background-color-blue
   color: white
   width: 100%
-  height: 81vh
+  min-height: 100vh
 
 .passwordForm
   @extend %flex-column-just-center
@@ -18,9 +18,10 @@
 .submitBtn
   @extend %submit-button
 
-.loginHeader
+.forgotPassHeader
   font-size: 30px
   padding: $padding-value
+  text-align: center
 
 .inputContainer
   @extend %inputContainer
