--- a/client/src/pages/ForgotPasswordPage/ForgotPasswordPage.module.sass
+++ b/client/src/pages/ForgotPasswordPage/ForgotPasswordPage.module.sass
@@ -1,14 +1,14 @@
+@import  '../../common/templates.sass'
 .mainContainer
   display: flex
   justify-content: center
   align-items: flex-start
-  background-color: #3ea9f5
+  background-color: $background-color-blue
   padding-top: 40px
 
 .passwordContainer
   display: flex
   flex-direction: column
-  background-color: #3ea9f5
   min-width: 300px
   width: 1200px
 
@@ -16,7 +16,7 @@
   display: flex
   align-items: center
   justify-content: center
-  margin-top: 80px
+  margin-top: 20px
 
 .header
   display: flex
@@ -26,7 +26,8 @@
   padding-left: 45px
   padding-right: 100px
   @media (max-width: 530px)
-    padding-right: 45px
+    padding-right: 20px
+    padding-left: 20px
 
 .linkContainer
   display: flex
