--- a/client/src/common/templates.sass
+++ b/client/src/common/templates.sass
@@ -4,12 +4,12 @@
   flex-direction: column
   justify-content: center
 
-%flex-column
+%flex-column-align-center
   display: flex
   flex-direction: column
   align-items: center
 
-$background-color: #3ea9f5
+$background-color-blue: #3ea9f5
 $submit-btn-color: #28d2d0
 $main-color: #9ca8b7
 $error-msg-color: #b72522
