--- a/client/src/pages/EventsPage/EventsPage.module.sass
+++ b/client/src/pages/EventsPage/EventsPage.module.sass
@@ -1,4 +1,7 @@
-.container 
+.container
   display: flex
   justify-content: center
+  margin: 0 auto
+  width: 80%
+  max-width: 768px
   margin-top: 50px
