--- a/client/src/components/Events/EventsList/EventsListItem/EventsListItem.module.sass
+++ b/client/src/components/Events/EventsList/EventsListItem/EventsListItem.module.sass
@@ -1,9 +1,4 @@
 .container
+  display: flex
   width: 100%
-  height: 20px
   margin-top: 20px
-
-.progress
-  height: 100%
-  background-color: green
-  max-width: 100%
