--- a/client/src/components/Events/EventsList/EventsListItem/ProgressBar/ProgressBar.module.sass
+++ b/client/src/components/Events/EventsList/EventsListItem/ProgressBar/ProgressBar.module.sass
@@ -1,22 +1,30 @@
 .container
+  display: flex
+  justify-content: space-between
+  align-items: center
   position: relative
-  box-sizing: border-box
+  padding: 0 10px
   width: 100%
-  height: 35px
+  min-height: 35px
   background-color: #eeeeee
   border-radius: 5px
 
 .progress
-  display: flex
-  align-items: center
-  height: 100%
+  position: absolute
+  right: 0
+  top: 0
+  left: 0
+  bottom: 0
+  z-index: 1
   background-color: #d1e9cf
   max-width: 100%
   border-radius: inherit
-  span
-    padding-left: 10px
 
 .timeLeft
-  position: absolute
-  right: 9px
-  top: 9px
+  z-index: 10
+  flex-shrink: 0
+
+.name
+  z-index: 10
+  padding: 5px 20px 5px 10px
+  word-break: break-all
