--- a/client/src/components/Header/UserInfo/UserInfo.module.sass
+++ b/client/src/components/Header/UserInfo/UserInfo.module.sass
@@ -45,3 +45,20 @@
     font-weight: 400
     font-size: 16px
     border: none
+
+.events
+  position: relative
+
+.badges
+  display: inline-block
+  position: absolute
+  top: -3px
+  left: 4px
+  color: white
+  background-color: red
+  width: 15px
+  height: 15px
+  border-radius: 50%
+  font-size: 10px
+  line-height: 15px
+  text-align: center
