--- a/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
+++ b/client/src/components/ModeratorDashboard/ModeratorDashboard.module.sass
@@ -9,9 +9,12 @@
   max-width: 900px
   box-shadow: 0 5px 10px 3px rgba(0, 0, 0, 0.1)
   margin: 20px auto
-  // margin-left: 40px
-  padding: 30px 40px 10px 40px
+  padding: 30px 40px 20px 40px
   @media(max-width: 680px)
     width: auto
     margin: 10px
     align-self: stretch
+
+.noOffers
+  width: 100%
+  text-align: center
