--- a/client/src/pages/EventsPage/EventsPage.module.sass
+++ b/client/src/pages/EventsPage/EventsPage.module.sass
@@ -1,7 +1,6 @@
 .container
   display: flex
   justify-content: center
-  margin: 0 auto
+  margin: 50px auto
   width: 80%
   max-width: 768px
-  margin-top: 50px
