refactor components and styles

--- a/client/src/components/Events/Events.module.sass
+++ b/client/src/components/Events/Events.module.sass
@@ -1,6 +1,4 @@
-
+@import '../../common/templates.sass'
 .container
-  display: flex
-  flex-direction: column
-  align-items: center
+  @extend %flex-column-align-center
   width: 100%
