--- a/client/src/pages/ContestCreation/ContestCreationPage.module.sass
+++ b/client/src/pages/ContestCreation/ContestCreationPage.module.sass
@@ -33,7 +33,6 @@
       line-height: 1.428
       color: #333333
 
-
 .container
   padding: 40px 0 15px 0
   background: #f8f8f8
@@ -42,6 +41,8 @@
   justify-content: center
   align-items: center
   border-bottom: 1px solid #eee
+  @media(max-width: 900px)
+    padding: 40px 25px 15px 25px
 
   .formContainer
     display: flex
@@ -56,7 +57,6 @@
       width: 800px
     @media(max-width: 900px)
       width: auto
-
 
 .footerButtonsContainer
   margin: 0 auto
