add mdia query for ButtonGroup styles

--- a/client/src/components/ContestForm/ButtonGroup/ButtonGroup.module.sass
+++ b/client/src/components/ContestForm/ButtonGroup/ButtonGroup.module.sass
@@ -1,13 +1,13 @@
 .container
   display: flex
   flex-direction: column
-  // justify-content: space-between
-  // width: 100%
 
 .buttons
   display: flex
   justify-content: space-between
   margin: 0 -.9375rem 2rem
+  @media(max-width: 992px)
+    flex-direction: column
 
 .headContainer
   box-sizing: border-box
