fix font-size in Button component

--- a/client/src/components/ContestForm/ButtonGroup/Button/Button.module.sass
+++ b/client/src/components/ContestForm/ButtonGroup/Button/Button.module.sass
@@ -16,6 +16,7 @@
 .active
   border: 3px solid #96dcdb
   box-shadow: 0 0 5px #e5f6f6
+
 .badgeContainer
   margin: 0 auto 1rem auto
 
@@ -25,6 +26,10 @@
   background-color: #77838f
   border-radius: 10rem
   padding: 7px 15px
+  font-size: 75%
+
+.description
+  font-size: 12px
 
 .activeBadge
   background-color: #2cb9b7
