add styles for Banner

--- a/client/src/components/Chat/ChatComponents/Chat/Chat.module.sass
+++ b/client/src/components/Chat/ChatComponents/Chat/Chat.module.sass
@@ -68,7 +68,7 @@
   -webkit-transform: rotate(90deg)
   transform: rotate(90deg)
   background-color: #8aca6b
-  padding: 6px
+  // padding: 6px
   box-sizing: border-box
   border-top-right-radius: 8px
   width: 90px
