--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,3 +20,20 @@
   min-width: 9.6875rem;
   padding: 0.75rem 1rem;
 }
+
+// FOR SVG
+.fill-gray-300 {
+  fill: #e7eaf3 !important;
+}
+.fill-white {
+  fill: #fff !important;
+}
+.fill-primary {
+  fill: #377dff !important;
+}
+.fill-dark {
+  fill: #1e2022 !important;
+}
+.fill-none {
+  fill: none !important;
+}
