--- a/client/src/components/HowItWorks/Banner/ModalVideo/ModalVideo.module.sass
+++ b/client/src/components/HowItWorks/Banner/ModalVideo/ModalVideo.module.sass
@@ -1,4 +1,3 @@
-
 .playerWrapper
   position: relative
   padding-top: 56.25%
@@ -10,3 +9,19 @@
 
 .play
   margin-right: 0.5rem
+
+.close
+  position: fixed
+  color: #FFFF
+  font-weight: bold
+  top: 10px
+  right: 20px
+  cursor: pointer
+  &:after
+    display: inline-block
+    content: "\00d7"
+    font-size: 26px
+
+.modal
+  background-color: #000000
+  padding: 0
