--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -20,6 +20,9 @@
   min-width: 9.6875rem;
   padding: 0.75rem 1rem;
 }
+.transition-3d-hover {
+  transition: all 0.2s ease-in-out;
+}
 
 // FOR SVG
 .fill-gray-300 {
