add Footer to HowItWorksPage

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -25,7 +25,7 @@
 }
 .transition-3d-hover:hover {
   transform: translateY(-3px);
-  box-shadow: 0 4px 11px rgba(255,255,255,.35);
+  box-shadow: 0 4px 11px rgba(255, 255, 255, 0.35);
 }
 
 // FOR SVG
