--- a/client/src/components/HowItWorks/CTASection/CTASection.module.sass
+++ b/client/src/components/HowItWorks/CTASection/CTASection.module.sass
@@ -2,3 +2,7 @@
 .bgGradient
   background-image: linear-gradient(150deg,#2d1582 0%,#19a0ff 100%)
   background-repeat: repeat-x
+  z-index: 2
+
+.content 
+  z-index: 3
