--- a/client/src/components/Chat/ChatComponents/ChatInut/ChatInput.module.sass
+++ b/client/src/components/Chat/ChatComponents/ChatInut/ChatInput.module.sass
@@ -3,7 +3,7 @@
   justify-content: flex-start
   align-items: center
   border-top: 1px solid #f3f3f3
-  padding: 0 15px
+  padding: 0 10px
   margin-top: 8px
   padding-top: 7px
 
@@ -14,7 +14,6 @@
 
   .form
     display: flex
-    flex-direction: row
     justify-content: space-between
     align-items: center
 
@@ -61,7 +60,8 @@
         border: 1px solid red !important
 
       .input
-        height: 20px
+        height: 30px
+        max-width: 210px
         outline: none
         border-radius: 6px
         padding: 6px
